modified:   .vscode/launch.json 	renamed:    ll_project/learning_logs/__init__.py -> accounts/__init__.py 	new file:   accounts/__pycache__/__init__.cpython-311.pyc 	new file:   accounts/__pycache__/admin.cpython-311.pyc 	new file:   accounts/__pycache__/apps.cpython-311.pyc 	new file:   accounts/__pycache__/models.cpython-311.pyc 	new file:   accounts/__pycache__/urls.cpython-311.pyc 	new file:   accounts/admin.py 	new file:   accounts/apps.py 	renamed:    ll_project/learning_logs/migrations/__init__.py -> accounts/migrations/__init__.py 	new file:   accounts/migrations/__pycache__/__init__.cpython-311.pyc 	new file:   accounts/models.py 	renamed:    ll_project/learning_logs/tests.py -> accounts/tests.py 	new file:   accounts/urls.py 	new file:   accounts/views.py 	renamed:    ll_project/db.sqlite3 -> db.sqlite3 	renamed:    ll_project/ll_project/__init__.py -> learning_logs/__init__.py 	renamed:    ll_project/learning_logs/__pycache__/__init__.cpython-311.pyc -> learning_logs/__pycache__/__init__.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/admin.cpython-311.pyc -> learning_logs/__pycache__/admin.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/apps.cpython-311.pyc -> learning_logs/__pycache__/apps.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/forms.cpython-311.pyc -> learning_logs/__pycache__/forms.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/models.cpython-311.pyc -> learning_logs/__pycache__/models.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/urls.cpython-311.pyc -> learning_logs/__pycache__/urls.cpython-311.pyc 	renamed:    ll_project/learning_logs/__pycache__/views.cpython-311.pyc -> learning_logs/__pycache__/views.cpython-311.pyc 	renamed:    ll_project/learning_logs/admin.py -> learning_logs/admin.py 	renamed:    ll_project/learning_logs/apps.py -> learning_logs/apps.py 	renamed:    ll_project/learning_logs/forms.py -> learning_logs/forms.py 	renamed:    ll_p

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"name": "Python 调试程序: Django shell",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"shell"
@@ -18,7 +18,7 @@
 			"name": "Python 调试程序: Django migrate",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"migrate"
@@ -28,7 +28,7 @@
 			"name": "Python 调试程序: Django runserver",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"runserver"
@@ -38,18 +38,18 @@
 			"name": "Python 调试程序: Django startpp",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"startapp",
-				"learning_logs"
+				"accounts"
 			]
 		},
 		{
 			"name": "Python 调试程序: Django makemigrations",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"makemigrations",
@@ -60,7 +60,7 @@
 			"name": "Python 调试程序: Django createsuperuser",
 			"type": "debugpy",
 			"request": "launch",
-			"program": "./ll_project/manage.py",
+			"program": "./manage.py",
 			"console": "integratedTerminal",
 			"args": [
 				"createsuperuser"
